# kkkkkk

お試しデプロイ/ds-clines-template-app_sample-onsen-map/: Dockerfile  README.md  pyproject.toml
お試しデプロイ/ds-clines-template-app_sample-onsen-map/clinerules-bank/common/: 01-tech-stack.md  02-coding.md  03-documentation.md  04-workflow-guidelines.md
お試しデプロイ/ds-clines-template-app_sample-onsen-map/data/: onsen_data.json
お試しデプロイ/ds-clines-template-app_sample-onsen-map/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
お試しデプロイ/ds-clines-template-app_sample-onsen-map/onsen-map/: README.md
お試しデプロイ/ds-clines-template-app_sample-onsen-map/onsen-map/src/: app.py  map_view.py
お試しデプロイ/ds-clines-template-app_sample-onsen-map/src/: app.py  data_collector.py  data_loader.py
